# ai_pm_platform

./: .gitignore  README.md  debug_xml_import.py  list_models.py  start_backend.ps1  test_deps.xml  test_gen.py  verify_deps_api.py  verify_task_fix.py
backend/: README.md  add_columns_pg.py  backend_health.txt  backend_projects.txt  check_alembic_version.py  check_db_status.py  check_schema.py  debug_alembic_style_output.txt  debug_alembic_style_output_2.txt  debug_connection_nullpool.py  debug_connection_nullpool_output.txt  debug_connection_output.txt  debug_output.txt  debug_sync_connection.py  debug_sync_connection_output.txt  debug_uv_output.txt  migrate_db.py  migrate_task_type.py  model_list.txt  pyproject.toml  reproduce_xml_issue.py  reset_alembic.py  run.bat  run_server.py  sql_app.db  sync_db.py  test_connection.py  test_llm_retry.py  test_output.txt  test_output_2.txt  verify_p6.py
backend/alembic/: env.py
backend/alembic/versions/: 01a8b8ca083c_add_planned_start_and_planned_end_to_.py  06c36a9e3cb3_add_deliverable_fields.py  3be7fdf88765_add_is_summary_and_outline_level.py  7063f7401218_rename_estimated_hours_to_original_.py  8f64d6110123_add_p6_schema.py  d10db9094acf_enable_ltree.py  ed213a820d77_add_responsible_party_and_fix_logic.py
backend/app/: init_db.py  main.py
backend/app/api/: api.py  deps.py
backend/app/core/: llm.py  (+4 more)
backend/tests/: debug_calendar.py  diagnose_scheduling.py  list_gemini_models.py  reproduce_cpm.py  test_baselines_logic.py  test_cpm_comprehensive.py  test_cpm_logic.py  test_gemini_connection.py  test_project_planning.py
(+46 files in other folders)
