[project]
name = "ai-pm-platform-backend"
version = "0.1.0"
description = "AI-Powered Project Management Platform Backend"
authors = [
    {name = "AI Assistant", email = "ai@example.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "langchain>=0.1.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.17.0",
    "google-genai>=0.3.0",
    "email-validator>=2.1.0",
    "psycopg[binary]>=3.3.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
